# taskflow

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  BACKEND_TEST_RESULTS.md  CHANGELOG.md  CHANGELOG_SUMMARY.txt  COMPLETE_SETUP_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPER_SETUP_GUIDE.md  DOCUMENTATION_MANIFEST.md  Dockerfile  EXECUTION_REPORT.md  FINAL_INITIALIZATION_REPORT.md  FINAL_PROJECT_INITIALIZATION.md  FINAL_SUMMARY.md  FRONTEND_INITIALIZATION_SUMMARY.md  GOAL_COMPLETION_SUMMARY.md  INITIALIZATION_COMPLETE.md  INITIALIZATION_COMPLETED.md  INITIALIZATION_COMPLETE_REPORT.md  INITIALIZATION_FINAL_REPORT.md  INITIALIZATION_STATUS.md  INITIALIZATION_SUMMARY.md  INITIALIZATION_TASK_COMPLETE.md  INITIALIZATION_TASK_COMPLETION_REPORT.md  INITIALIZATION_VERIFICATION.md  INITIALIZATION_VERIFIED.md  INSTALLATION.md  MONOREPO_STRUCTURE_VERIFIED.md  PROJECT_INITIALIZATION.md  PROJECT_INITIALIZATION_VERIFICATION.md  PROJECT_SETUP.md  PROJECT_SETUP_VERIFICATION.md  PROJECT_STRUCTURE_VERIFICATION.md  PROJECT_STRUCTURE_VERIFIED.md  QUICK_START.md  README.md  REPOSITORY_INITIALIZATION_STATUS.md  (+14 more)
backend/: .env.development  .env.example  .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/models/: __init__.py  board.py  project.py  task.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_api.py  test_health.py  test_projects.py  test_soft_limits_v2.py  test_tasks.py
(+214 files in other folders)
